<resources>
    <string name="app_name">AdminForGroceryStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_user">Search User</string>
    <string name="button_send">Send</string>
    <string name="default_content_image">nothing</string>
    <string name="empty_message">Let\'s choose someone to start chatting!</string>
    <string name="title_activity_chat">Leanback ChatActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="hint_search_item">Search items</string>
    <string name="button_add_item">Add Item</string>
    <string name="label_order_by_price">Order By</string>
    <string name="table_row_product">Product</string>
    <string name="table_row_type">Type</string>
    <string name="table_row_price">Price</string>
    <string name="table_row_description">Description</string>
    <string name="table_row_Name">Vegetable</string>
    <string name="cancel">Cancel</string>
    <string name="hint_item_name">Enter the item\'s name</string>
    <string name="label_item_type">Type</string>
    <string name="type_fish">Fish</string>
    <string name="type_egg">Egg</string>
    <string name="type_fruit">Fruit</string>
    <string name="type_vegetable">Vegetable</string>
    <string name="type_milk">Milk</string>
    <string name="hint_item_price">Enter the item\'s price</string>
    <string name="hint_item_des">Enter the item\'s description</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="hint_item_image">Enter the item\'s image</string>

    <!--  label for order by price  -->
    <string-array name="order_price_array">
        <item>Price: Low To High</item>
        <item>Price: High To Low</item>
        <item>Type</item>
    </string-array>
</resources>