<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/dialog_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lavender_border"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:hint="@string/hint_item_name"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:startIconDrawable="@drawable/ic_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelOrderByPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_item_type"
            android:textColor="@color/text_default"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/type_fish" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/type_egg" />

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/type_fruit" />

            <RadioButton
                android:id="@+id/radio_button_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="@string/type_vegetable" />

            <RadioButton
                android:id="@+id/radio_button_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/type_milk" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="@color/divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:hint="@string/hint_item_price"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:startIconDrawable="@drawable/ic_price">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:alpha="0.9"
            android:hint="@string/hint_item_des"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:startIconDrawable="@drawable/ic_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="text"
                android:maxLines="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:hint="@string/hint_item_image"
            app:boxBackgroundColor="?attr/colorOnPrimarySurface"
            app:startIconDrawable="@drawable/ic_image">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="10dp">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@id/buttonAddItem"
                android:backgroundTint="@color/button_cancel"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/buttonAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/white"
                android:paddingHorizontal="20dp"
                android:text="@string/add_item"
                android:textColor="@color/text_default"
                android:textSize="14sp"
                app:cornerRadius="20dp" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>