<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--    <TableLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        tools:ignore="UselessParent">-->

    <!--    </TableLayout>-->

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/default_content_image"
                android:scaleType="fitCenter"
                android:src="@drawable/default_avatar_profile" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/itemImage"
                android:text="@string/table_row_Name"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


        <TextView
            android:id="@+id/itemType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/table_row_type"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/table_row_price"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:text="@string/table_row_description"
            android:textSize="16sp" />
    </TableRow>

</LinearLayout>