<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".fragments.CategoryFragment">

    <ProgressBar
        android:id="@+id/progressBarProducts"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/bg_header_chats"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LayoutHeaderProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="gone" >

        <EditText
            android:id="@+id/search_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/bg_search_users"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:hint="@string/hint_search_item"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/layoutOrderByPrice"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/button_add_item" />

            <LinearLayout
                android:id="@+id/layoutOrderByPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="3dp"
                android:background="@color/bg_order_by_price"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="13dp">

                <TextView
                    android:id="@+id/labelOrderByPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_order_by_price"
                    android:textAlignment="center"
                    android:textColor="@color/text_default"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="5dp"
                    android:background="@color/black" />

                <Spinner
                    android:id="@+id/orderByPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBodyProduct"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:visibility="gone">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:background="@color/bg_header_chats"
                android:gravity="center_vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/table_row_product"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/table_row_type"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/table_row_price"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_horizontal"
                    android:text="@string/table_row_description"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </TableLayout>
    </LinearLayout>

</LinearLayout>