<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="7dp"
    android:weightSum="3"
    tools:context=".fragments.MessagesFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_list_users"
        android:orientation="vertical"
        android:padding="5dp">

        <EditText
            android:id="@+id/search_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bg_search_users"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="5dp"
            android:hint="@string/hint_search_user"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listUsers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="NestedWeights" />
    </LinearLayout>
<!--    abc-->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/empty_message"
        android:layout_gravity="center"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/bg_header_chats"
        android:visibility="visible"
        android:id="@+id/notChooseUser"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/chats">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_header_chats"
            android:padding="10dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatarChats"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar_profile"
                app:riv_oval="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/avatarChats"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/userEmailChats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="son@gmail.com" />

                <TextView
                    android:id="@+id/userNameChats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userEmailChats"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="son trinh" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2"
            tools:ignore="NestedWeights">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/receiverMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/senderMessage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_bottom_chats"
            android:padding="5dp">

            <EditText
                android:id="@+id/editText"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/material_dynamic_secondary50"
                android:inputType="text"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/attach"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/photo"
                android:contentDescription="@string/default_content_image"
                android:src="@drawable/ic_attach" />

            <ImageView
                android:id="@+id/photo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/buttonSend"
                android:contentDescription="@string/default_content_image"
                android:src="@drawable/ic_camera" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/bg_header_chats"
                android:paddingVertical="10dp"
                android:text="@string/button_send"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>